--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -43,88 +43,95 @@
             left: 31%;"></div>
 
         
-        <div style="width: 1358px;height: 500px;background-color: white;margin-top: 89px;border: 1px solid black;margin-top: 150px;margin-left: -140px;">
-            <section>
-                <div style="width:210px;height:210px;background:white;position: absolute;left: 17%;border: 3px solid black;top:203px;"></div>
+            <div style="width: 1358px;height: 500px;background-color: white;
+            top: 13%;position: absolute;left: -147px;border-top: solid;border-right: solid;
+             border-left: solid;">
+                <section>
+                    <div style="width:210px;height:210px;background:white;position: absolute;left: 17%;border: 3px solid black;top:26px;"></div>
 
-                <h1 style="position: absolute;left: 41%;">Nome do Fornecedor</h1>
+                    <h1 style="position: absolute;left: 41%;">Nome do Fornecedor</h1>
 
-                <div style="width: 413px;height: 226px;background-color: #fff0;position: absolute;left: 38%;top: 28%;">
+                    <div style="width: 413px;height: 226px;background-color: #fff0;position: absolute;left: 40%;top: 28%;">
 
-                    <h1 style="position: absolute;left: 32%;top: 0px;">Descrição</h1>
-                    <textarea style="position: absolute;left: 22%;top: 48%;width: 260px;height: 97px;">
-
-                    </textarea>
-                </div>
-                
-
-
-                <div style="position: absolute;left: 50%;margin-top: 89px;">
-                    <span style=" color: orange;" class="fa fa-star checked"></span>
-                    <span style=" color: orange;" class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-
-                    <button onclick="filtro()" style="background: url('../Content/images/avaliar.png') no-repeat;width: 50px;height:50px;
-                     position: absolute;margin-left: 240px;margin-top: -59px;"data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal"></button>
-
-                    <img style="position: absolute;right: 538px;top: 190px;width:40px;" src="~/Content/images/endereco.png" />
-
-
-                    <img style="position: absolute;right: 538px;top: 280px;width:40px;" src="~/Content/images/phone.png" />
-                    <img style="position: absolute;right: 47px;top: 280px;width:40px;" src="~/Content/images/email1.png" />
-
-                   
+                        <h1 style="position: absolute;left: 32%;top: 0px;">Descrição</h1>
+                        <textarea style="position: absolute;left: 22%;top: 48%;width: 260px;height: 97px;"></textarea>
+                    </div>
 
 
 
-                </div>
+                    <div style="position: absolute;left: 50%;margin-top: 89px;">
+                        <span style=" color: orange;" class="fa fa-star checked"></span>
+                        <span style=" color: orange;" class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+
+                        <button onclick="filtro()" style="background: url('../Content/images/avaliar.png') no-repeat;width: 50px;height:50px;
+                     position: absolute;margin-left: 240px;margin-top: -59px;" data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal"></button>
+
+                        <img style="position: absolute;right: 538px;top: 190px;width:40px;" src="~/Content/images/endereco.png" />
+
+
+                        <img style="position: absolute;right: 538px;top: 280px;width:40px;" src="~/Content/images/phone.png" />
+                        <img style="position: absolute;right: 47px;top: 280px;width:40px;" src="~/Content/images/email1.png" />
 
 
 
-            </section>
-
-           
-
-        </div>
-              <div style=" width: 1358px; height: 761px; background-color: white; margin-top: 89px; margin-top: 2px; 
-                position: absolute; right: 174px; border: solid 1px;">
 
 
-                 <section>
-
-                   
-
-                    <form  style="position: absolute;left: 50%;margin-top: -12px;">
-                        <h2 style="margin-left:-90px;">Upload de arquivo PDF</h2>
-                        <br />
-                        <br />
-                        <input type="file" name="pic" accept="image/*">
-                        <input  type="submit">
-                    </form>
+                    </div>
 
 
-                 
-
-
-
-                    
 
                 </section>
-                  <h2 style="margin-top: 194px;margin-left: 128px;" class="w3-center">Galeria de fotos</h2>
 
-                  <div class="w3-content w3-display-container" style="position: absolute;top: 32%;left: 43%;">
-                      <img class="mySlides" src="~/Content/images/about.jpg" style="width:300px">
-                      <img class="mySlides" src="~/Content/images/add-imagem.png" style="width:300px">
-                      <img class="mySlides" src="~/Content/images/about.jpg" style="width:300px">
-                      <img class="mySlides" src="img_forest.jpg" style="width:300px">
 
-                      <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-                      <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-                  </div>
 
-              </div>  
+            </div>
+            <div style=" width: 1358px;height: 761px;background-color: white;position: absolute;
+               left: -147px;top: 65%;border-top: solid;border-right: solid;border-left: solid;">
+
+
+                <section>
+
+
+
+                   
+                        <h2 style="position: absolute;left: 48%;">Arquivo PDF</h2>
+                        
+                       
+                   
+
+
+
+
+
+
+
+
+                </section>
+                <h2 style="margin-top: 194px;margin-left: 128px;" class="w3-center">Galeria de fotos</h2>
+
+                <div class="carousel" style="position: relative;top: 15px;left: 5%;">
+                    <img src="~/Content/images/about.jpg" alt="Image 1" />
+                    <img src="~/Content/images/bg_1.jpg" alt="Image 2" />
+                    <img src="~/Content/images/bg_3.jpg" alt="Image 3" />
+                    <img src="~/Content/images/photo.png" alt="Image 4" />
+                    <img src="~/Content/images/team.jpg" alt="Image 5" />
+                </div>
+
+
+                <div class="comentario">
+                    <h3>Nome avaliador</h3>
+                   
+
+                </div>
+
+            </div>
+
+
+        
+         
                                
       
 
