--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -80,21 +80,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript">
-
-        function moverMenu(){
-       //var mover = document.getElementById('sidebar').style.width = '300px';
-       var perfil = document.getElementById('perfil').style.marginLeft = '90px';
-}
-
-function moverMenu2(){
-    //var mover = document.getElementById('sidebar').style.width='150px';
-    var perfil = document.getElementById('perfil').style.marginLeft = '20px';
-}
-
-
-    </script>
+    <script src="~/Content/config/js/carousel-perfil.js"></script>
+    
 </body>
 
 </html>
