--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -9,7 +9,7 @@
    
     <!-- Page Content  -->
     <div id="content" style="background: white">
-        <section class="pesquisa" style=" width: 2000px;height:104px;background: #0C496BE6;position: absolute;top: 0px;left: -332px;">
+        <section class="pesquisa" style=" width: 2000px;height:104px;background: #0C496BE6;position: absolute;top: 0px;left: -2px;">
 
 
 
@@ -61,7 +61,7 @@
         <div id="divFiltro" style="width:600px;height:450px;background-color:white;border: 30px;border-color: black;visibility:hidden;position: absolute;
             left: 31%;"></div>
 
-        <div class="resultado-pesquisa" style="position: absolute;top: 20%;right: 15%;">
+        <div class="resultado-pesquisa" style="position: absolute;top: 20%;left: 350px;">
             <ul class="row list-unstyled m-3">
                
 
