--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model SupplierRanking.Models.Fornecedor
 @{
     ViewBag.Title = "Perfil";
     Layout = "~/Views/Shared/Layout_logada.cshtml";
@@ -43,20 +43,30 @@
             left: 31%;"></div>
 
         
-            <div style="width: 1358px;height: 500px;background-color: white;
-            top: 13%;position: absolute;left: 195px;border-top: solid;border-right: solid;
-             border-left: solid;">
+            <div style="width: 1358px;height: 500px;background-color: #D0A748;
+            top: 13%;position: absolute;left: 195px; box-shadow: 0px 0px 20px black;">
                 <section>
-                    <div style="width:210px;height:210px;background:white;position: absolute;left: 17%;border: 3px solid black;top:26px;"></div>
+                    
+                    <div style="width:210px;height:210px;position: absolute;left: 17%;top:26px;">
+                        @if (Model.Imagem64 == null)
+                        {
+                            <img src="~/Content/images/iconecor.png" height="210" width="210" />
+                        }
+                        else
+                        {
+                            String imagem64 = string.Format("data:image/jpeg;base64,{0}", @Model.Imagem64); //PRECISA DISSO PRA FUNCIONAR A IMAGEM
+                            <img src="@imagem64" height="210" width="210" />
+                        }
+                    </div>
 
-                    <h1 style="position: absolute;left: 41%;">Nome do Fornecedor</h1>
+                    <h1 style="position: absolute;left: 41%;">@Model.Nome_empresa</h1>
 
                     <div style="width: 413px;height: 226px;background-color: #fff0;position: absolute;left: 40%;top: 28%;">
 
                         <h1 style="position: absolute;left: 32%;top: 0px;">Descrição</h1>
-                        <textarea style="position: absolute;left: 22%;top: 48%;width: 260px;height: 97px;"></textarea>
+                        <div style="position: absolute; width: 350px; height: 200px; border: 1px solid black; top: 70px;">@Model.Descricao</div>
                     </div>
-
+                    
 
 
                     <div style="position: absolute;left: 50%;margin-top: 89px;">
@@ -88,8 +98,8 @@
 
 
             </div>
-            <div style=" width: 1358px;height: 1200px;background-color: white;position: absolute;
-               left: 195px;top: 64%;border-top: solid;border-right: solid;border-left: solid;border-bottom: solid;">
+            <div style=" width: 1358px;height: 1200px;background-color: #D0A748;position: absolute;
+               left: 195px;top: 64%; box-shadow: 0px 0px 20px black">
 
 
                 <section>
