--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -89,7 +89,8 @@
                         <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
                             <button data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
 
-                            <a href="/HomeLogada/Perfil">Perfil</a>
+                            @Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })
+                            @*<a id=""href="/HomeLogada/Perfil">Perfil</a>*@
                         </div>
                     </div>
                     <div class="row mt-3 p-2">
