--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -8,7 +8,7 @@
     <!-- Sidebar  -->
    
     <!-- Page Content  -->
-    <div id="content" style="background: white">
+    <div id="content" style="background:#eefbfa00">
         <section class="pesquisa" style=" width: 2000px;height:104px;background: #0C496BE6;position: absolute;top: 0px;left: -2px;">
 
 
