Val - fiz quase nada

--- a/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
@@ -111,7 +111,7 @@
                 <div class="row">
                     <!--- CEP --->
                     <div class="col-5 wrap-input p-0">
-                        <input class="input" type="text" name="cep" placeholder="CEP">
+                        <input class="input" type="text" name="cep" placeholder="CEP" data-mask="00000-000" data-mask-sectionFocus="true">
                     </div>
 
                     <!--- Endereço --->
