--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -90,7 +90,7 @@
                             <button data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
 
                             @Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })
-                            @*<a id=""href="/HomeLogada/Perfil">Perfil</a>*@
+                            @*<a id=""href="/HomeLogada/Perfil?item.Cnpj">Perfil</a>*@
                         </div>
                     </div>
                     <div class="row mt-3 p-2">
